src/styles/_animatedscroll.scss
$topOffset: 64px; // sticky header height

.animation {
  width: 100%;
  margin-top: 8rem;
}

.animation__fixed {
  overflow: hidden;
  position: sticky;
  top: $topOffset;
  width: 100%;
  height: calc(100vh - #{$topOffset});
  z-index: 1;
}

.animation__background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: url("/images/home-map-bg.jpg");
  background-position: fixed;
  background-repeat: none;
  background-size: auto 100%; // fill height
  background-position: center right;
}

.animation__step {
  position: relative;
  display: flex;
  align-items: stretch;
  justify-content: flex-start;
  box-sizing: border-box;
  height: calc(100vh - #{$topOffset});
  width: 100%;
  z-index: 2;
}

// step content overlapping map
.animation__step-content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  padding: 3.2rem;
  background: transparent;
  width: 100%;
  font-size: 18px;
  color: #2c390b;
  font-family: Halyard, sans-serif;
  font-style: normal;
  font-weight: 500;
  line-height: 1.17;
  letter-spacing: -1px;
  & > * {
    max-width: 16em;
    padding: 1em;
    background: #fff;
    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3), 0 0 2px rgba(0, 0, 0, 0.1);
  }
}
// shift to map / step content side by side
@media (min-width: 600px) {
  .animation__step-content {
    width: 45%;
    background: rgb(250, 251, 246);
    background: linear-gradient(
      90deg,
      rgba(250, 251, 246, 1) 65%,
      rgba(255, 255, 255, 0) 100%
    );
    font-size: 30px;
    & > * {
      padding: 0;
      background: transparent;
      box-shadow: none;
    }
  }
}

// step 1 specific styles
.animation__step.animation__step--1 {
  margin-top: calc(-100vh + #{$topOffset});
  .animation__step-content {
    & span:first-child {
      font-family: Louize Display;
      font-style: italic;
      font-weight: 400;
      font-size: 21px;
      line-height: 1.1;
      color: #e55934;
      display: block;
      margin-bottom: 0.8em;
    }
  }
}
// bump font size
@media (min-width: 600px) {
  .animation__step.animation__step--1 {
    .animation__step-content span:first-child {
      font-size: 30px;
    }
  }
}

// step 3 specific styles
@media (min-width: 600px) {
  // prevent legend from getting too big on large displays
  .animation__step.animation__step--3 {
    img {
      max-width: 320px;
    }
  }
}

// step 4 specific styles
.animation__step.animation__step--4 {
  .animation__step-content {
    span {
      font-style: normal;
      font-weight: 500;
      font-size: 24px;
      line-height: 1.1;
      letter-spacing: -1px;
      color: #e55934;
    }
    a {
      color: #e55934;
      margin-top: 2.4rem;
      font-style: normal;
      font-weight: 400;
      font-size: 18.2857px;
      line-height: 1.56;
      letter-spacing: 0.251429px;
      display: block;
      & > img {
        position: relative;
        max-width: 16px;
      }
    }
  }
}
// bump font size
@media (min-width: 600px) {
  .animation__step.animation__step--4 {
    .animation__step-content span {
      font-size: 50px;
      letter-spacing: -2px;
    }
  }
}

// map element for animation
.expani__map {
  position: absolute;
  right: 0;
  top: 0;
  height: 100%;
}

// tooltip element for animation
.expani__tooltip {
  position: absolute;
  right: 3.2rem;
  top: 50%;
  transform: translateY(-50%);
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
}

/** roughly square display (e.g. non-widescreen LCDs) */
@media (max-aspect-ratio: 4/3) {
  // shift map to the right
  .expani__map {
    position: absolute;
    right: 0;
    top: 0;
    height: 100%;
    transform: translateX(25%);
  }
}

